Templates with loop

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,18 @@
         {% endif %}
     </head>
     <body>
-        <h1>Hello, {{ user.username }}!</h1>
+        <div class='jumbotron'>
+            <div class='row'>
+                <h1>Hello, {{ user.username }}!</h1>
+            </div>
+            <div class='row'>
+                {% for post in posts %}
+                <div>
+                <p>{{ post.author.username }} says: <b>{{ post.body }}</b></p>
+                </div>
+            </div>
+        {% endfor %}
+
+        </div>
     </body>
 </html>
