--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,24 +1,13 @@
-<html>
-    <head>
-        {% if title %}
-        <title>{{ title }} - Microblog</title>
-        {% else %}
-        <title>Welcome to Microblog</title>
-        {% endif %}
-    </head>
-    <body>
-        <div class='jumbotron'>
-            <div class='row'>
-                <h1>Hello, {{ user.username }}!</h1>
-            </div>
-            <div class='row'>
-                {% for post in posts %}
-                <div>
+{% extends "base.html" %}
+
+
+
+
+    {% block content %}
+        <h1>Hello, {{ user.username }}!</h1>
+        {% for post in posts %}
+            <div>
                 <p>{{ post.author.username }} says: <b>{{ post.body }}</b></p>
-                </div>
             </div>
         {% endfor %}
-
-        </div>
-    </body>
-</html>
+    {% endblock %}
